Responsive layout issues

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -16,7 +16,7 @@ $bs-btn-font-weight-lg: 300;
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400&family=Roboto+Slab:wght@300;400&display=swap");
 body {
-  padding: 1.5rem;
+  padding: 0 1.5rem;
   background-color: $navy;
   background: rgb(36, 29, 65);
   background: linear-gradient(
@@ -48,7 +48,7 @@ h1 {
 }
 h2 {
   color: $body-secondary-color;
-  line-height: 0.9;
+
   font-family: $roboto;
 }
 h3 {
@@ -67,10 +67,10 @@ hr {
 header {
   background-color: rgba(10, 25, 47, 0.85);
   backdrop-filter: blur(5px);
-  padding: 0 50px;
+
   box-shadow: 0 10px 30px -10px $navy-shadow;
 }
-header .fs-4{
+header .fs-4 {
   font-family: $roboto;
 }
 
@@ -196,7 +196,6 @@ header .fs-4{
     margin: 0px 20px 5px 0px;
     color: $body-secondary-color;
     font-family: $mono;
-    font-size: 13px;
     white-space: nowrap;
   }
 }
@@ -210,12 +209,16 @@ header .fs-4{
   justify-content: flex-end;
 }
 
+.project-links {
+  margin-bottom:10px;
+}
+
 .project-links a {
   -webkit-box-pack: center;
   justify-content: center;
   -webkit-box-align: center;
   align-items: center;
-  padding: 5px 10px;
+  padding: 2px 8px;
 }
 .btn-primary {
   background-color: $success;
@@ -316,7 +319,7 @@ ul.skills-list li {
   position: relative;
   width: 120px;
   border-radius: $border-radius;
-  background-color: $babyblue
+  background-color: $babyblue;
 }
 
 .about .wrapper::before {
@@ -354,8 +357,8 @@ ul.skills-list li {
 }
 .about .wrapper img:hover {
   opacity: 1;
-  mix-blend-mode:normal;
-  filter:none;
+  mix-blend-mode: normal;
+  filter: none;
 }
 
 .about .wrapper::after {
@@ -376,97 +379,113 @@ ul.skills-list li {
   transform: translate(8px, 8px);
 }
 
-
 .slider-thumb::before {
-	position: absolute;
-	content: "";
-	left: 10%;
-	top: 100px;
-	width: 450px;
-	height: 450px;
-	background: $light-navy;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 5s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 5s linear infinite;
+  position: absolute;
+  content: "";
+  left: 10%;
+  top: 100px;
+  width: 600px;
+  height: 600px;
+  background: $light-navy;
+  border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
+  will-change: border-radius, transform, opacity;
+  animation: sliderShape 5s linear infinite;
+  display: block;
+  z-index: -1;
+  -webkit-animation: sliderShape 5s linear infinite;
 }
 
 .slider-thumb-3::before {
-	position: absolute;
-	content: "";
-	left: 65%;
-	top: 2%;
-	width: 120px;
-	height: 120px;
-	background: $success-hover;
-	border-radius: 52% 57% 82% 55% / 55% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape 3s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape 3s linear infinite;
-  opacity:0.6;
+  position: absolute;
+  content: "";
+  left: 65%;
+  top: 7%;
+  width: 120px;
+  height: 120px;
+  background: $success-hover;
+  border-radius: 52% 57% 82% 55% / 55% 45% 80% 66%;
+  will-change: border-radius, transform, opacity;
+  animation: sliderShape 3s linear infinite;
+  display: block;
+  z-index: -1;
+  -webkit-animation: sliderShape 3s linear infinite;
+  opacity: 0.6;
 }
 
-@keyframes sliderShape{
-  0%,100%{
-  border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
+@keyframes sliderShape {
+  0%,
+  100% {
+    border-radius: 42% 58% 70% 30% / 45% 45% 55% 55%;
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
   }
-  34%{
-      border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
-    transform:  translate3d(0,5px,0) rotateZ(0.01deg);
+  34% {
+    border-radius: 70% 30% 46% 54% / 30% 29% 71% 70%;
+    transform: translate3d(0, 5px, 0) rotateZ(0.01deg);
   }
-  50%{
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
+  50% {
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
   }
-  67%{
-    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60% ;
-    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
+  67% {
+    border-radius: 100% 60% 60% 100% / 100% 100% 60% 60%;
+    transform: translate3d(0, -3px, 0) rotateZ(0.01deg);
   }
 }
-
 
 .slider-thumb-2::before {
-	position: absolute;
-	content: "";
-	right: 15px;
-	top: 15%;
-	width: 250px;
-	height: 250px;
-	background:#800060;
+  position: absolute;
+  content: "";
+  right: 15px;
+  top: 55%;
+  width: 250px;
+  height: 250px;
+  background: #800060;
   opacity: 0.6;
-	border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
-	will-change: border-radius, transform, opacity;
-	animation: sliderShape-2 8s linear infinite;
-	display: block;
-	z-index: -1;
-	-webkit-animation: sliderShape-2 8s linear infinite;
+  border-radius: 62% 47% 82% 35% / 45% 45% 80% 66%;
+  will-change: border-radius, transform, opacity;
+  animation: sliderShape-2 8s linear infinite;
+  display: block;
+  z-index: -1;
+  -webkit-animation: sliderShape-2 8s linear infinite;
 }
 
-@keyframes sliderShape-2{
-  0%,100%{
-  border-radius: 92% 38% 80% 10% / 45% 70% 55% 105%;
-    transform: translate3d(0,0,0) rotateZ(0.05deg);
+@keyframes sliderShape-2 {
+  0%,
+  100% {
+    border-radius: 92% 38% 80% 10% / 45% 70% 55% 105%;
+    transform: translate3d(0, 0, 0) rotateZ(0.05deg);
   }
-  34%{
-      border-radius: 70% 63% 100% 24% / 30% 89% 71% 70%;
-    transform:  translate3d(0,19px,0) rotateZ(0.05deg);
+  34% {
+    border-radius: 70% 63% 100% 24% / 30% 89% 71% 70%;
+    transform: translate3d(0, 19px, 0) rotateZ(0.05deg);
   }
-  50%{
-    transform: translate3d(0,0,0) rotateZ(0.01deg);
+  50% {
+    transform: translate3d(0, 0, 0) rotateZ(0.01deg);
   }
-  67%{
-    border-radius: 100% 50% 0% 100% / 30% 100% 60% 60% ;
-    transform: translate3d(0,-3px,0) rotateZ(0.01deg);
+  67% {
+    border-radius: 100% 50% 0% 100% / 30% 100% 60% 60%;
+    transform: translate3d(0, -3px, 0) rotateZ(0.01deg);
   }
 }
 
-
+@media (min-width: 300px) {
+  h1 {
+    font-size: 2.8rem;
+  }
+  h2 {
+    font-size: 1.6rem;
+  }
+  section.blocks {
+    padding: 70px 0 0;
+  }
+}
 
 @media (min-width: 768px) {
+  h1 {
+    font-size: 3.5rem;
+  }
+  h2 {
+    font-size: 1.8rem;
+  }
   .project {
     margin-bottom: 50px;
   }
@@ -476,9 +495,23 @@ ul.skills-list li {
   .project:nth-of-type(2n + 1) .project-description {
     margin-left: -145px;
   }
+  .project-tech-list li {
+    font-size: 11px;
+  }
 }
 
 @media (min-width: 992px) {
+  header {
+    padding: 0 50px;
+  }
+  h1 {
+    font-size: 4.5rem;
+  }
+  h2 {
+    font-size: 2.2rem;
+    line-height: 0.9;
+  }
+ 
   .project {
     margin-bottom: 80px;
   }
@@ -491,14 +524,21 @@ ul.skills-list li {
   .project:nth-of-type(2n) .project-description {
     margin-right: -155px;
   }
+  .project-tech-list li {
+    font-size: 13px;
+  }
+
 }
 
 @media (min-width: 1200px) {
+  section.intro {
+    padding: 100px 0 0;
+  }
   section.blocks {
     padding: 150px 0 0;
   }
   h1 {
-    font-size: 4.5rem;
+    font-size: 5rem;
   }
   h2 {
     font-size: 2.2rem;
